--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "i18next": "^11.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-i18next": "^7.6.1",
     "react-scripts": "1.1.4",
     "styled-components": "^3.2.6"
   },
